objects/ccpt__Meeting__c.object
<CustomObject>
    <fields>
        <fullName>ccpt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Action_Date__c</fullName>
        <description>Date of the first open action, null if there are no open actions against this meeting</description>
        <label>First Open Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccpt__Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Board__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board</label>
        <referenceTo>ccpt__Board__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Conference_Details__c</fullName>
        <label>Conference Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Creator_Department__c</fullName>
        <formula>CreatedBy.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Duration_Actual_Minutes__c</fullName>
        <formula>IF(ccpt__Start_Actual__c == null,
  0,
  IF(ccpt__isRunning__c,
    MIN(FLOOR(1440 * (NOW() - ccpt__Start_Actual__c)), 1440),
    ccpt__Duration_Actual__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpt__Duration_Actual__c</fullName>
        <label>Duration (System)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpt__Duration__c</fullName>
        <label>Duration (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccpt__Health__c</fullName>
        <formula>IMAGE(
       CASE( ccpt__Status_Calculated__c , 
             &apos;Complete&apos;, &apos;/img/samples/light_green.gif&apos;, 
	     &apos;Incomplete&apos;, &apos;/img/samples/light_yellow.gif&apos;,
             &apos;Late&apos;, &apos;/img/samples/light_red.gif&apos;,
             &apos;/s.gif&apos;
       ),
       &apos;Health Status&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Hourly_Cost__c</fullName>
        <label>Hourly Cost</label>
        <summarizedField>ccpt__Attendee__c.ccpt__Cost__c</summarizedField>
        <summaryFilterItems>
            <field>ccpt__Attendee__c.ccpt__IsAttended__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpt__Attendee__c.ccpt__Meeting__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Meeting_Actions__c</fullName>
        <description>This number represents the total number of action items against a meeting.</description>
        <inlineHelpText>This number represents the total number of action items against a meeting.</inlineHelpText>
        <label>Meeting Actions</label>
        <summarizedField>ccpt__Agenda_Item__c.ccpt__Meeting_Actions__c</summarizedField>
        <summaryForeignKey>ccpt__Agenda_Item__c.ccpt__Meeting__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Meeting_Attendees__c</fullName>
        <description>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</description>
        <inlineHelpText>This number represents the total number of invitees in a meeting, filtered to only include those who are marked as attended.</inlineHelpText>
        <label>Meeting Attendees</label>
        <summaryFilterItems>
            <field>ccpt__Attendee__c.ccpt__IsAttended__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ccpt__Attendee__c.ccpt__Meeting__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ccpt__Meeting_Cost__c</fullName>
        <formula>(ccpt__Duration_Actual_Minutes__c / 60) * ccpt__Hourly_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccpt__Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ccpt__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt__Owner_Department__c</fullName>
        <formula>Owner:User.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__RelatedTo__c</fullName>
        <externalId>true</externalId>
        <label>System - Related To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Start_Actual__c</fullName>
        <label>Actual Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccpt__Start__c</fullName>
        <label>Meeting Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ccpt__Status_Calculated__c</fullName>
        <formula>IF(ISPICKVAL(ccpt__Status__c,&apos;complete&apos;), &apos;Complete&apos;, IF(ccpt__isOverdue__c, &apos;Late&apos;, &apos;Incomplete&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccpt__Status__c</fullName>
        <label>Status (System)</label>
        <picklist>
            <picklistValues>
                <fullName>late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>complete</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ccpt__isOverdue__c</fullName>
        <formula>NOT(ISBLANK(ccpt__Action_Date__c)) &amp;&amp; ccpt__Action_Date__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt__isRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isRunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccpt_ccpx__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_ccpx__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_rfx__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_rfx__Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccpt_rfx__Problem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Problem</label>
        <referenceTo>BMCServiceDesk__Problem__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingReasons>
        <fullName>ccpt__Manage__c</fullName>
        <label>Manage</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ccpt__View__c</fullName>
        <label>View</label>
    </sharingReasons>
</CustomObject>